--- a/_data/meme_generator.yaml
+++ b/_data/meme_generator.yaml
@@ -63,8 +63,44 @@ paths:
                             type: integer
                             description: Number of editable text boxes for the meme template.
                             example: 2
-        default:
-          description: Unexpected error
+              model: |
+                ```json
+                {
+                  "success": boolean,
+                  "data": {
+                    "memes": [
+                      {
+                        "id": string,
+                        "name": string,
+                        "url": string,
+                        "width": integer,
+                        "height": integer,
+                        "box_count": integer
+                      }
+                    ]
+                  }
+                }
+                ```
+        "default":
+          description: An error ocurred
+          content:
+            application/json:
+              schema:
+                success:
+                  type: boolean
+                  description: Will return `false` when there are any errors in the request.
+                  example: false
+                error_message:
+                  type: string
+                  description: Some hopefully-useful statement about why it failed.
+                  example: "There are parameters missing in the request body."
+              model: |
+                ```json
+                {
+                  "success": boolean,
+                  "error_message": string
+                }
+                ```
     post:
       description: |
         This is a **fake** method for testing endpoints with multiple methods. This API does **not** have a `POST` method.
@@ -78,10 +114,48 @@ paths:
                 description: This is a **fake** body parameter. It does **not** exist in this API.
                 required: true
                 type: string
+                example: "Hey, I'm a fake parameter!"
               bogus_2:
                 description: This is another **fake** body parameter. It does **not** exist in this API.
                 required: false
                 type: string
+                example: "Hey, I'm a fake parameter too!"
+      responses:
+        "200":
+          description: OK - The request was successful.
+          content:
+            application/json:
+              schema:
+                success:
+                type: boolean
+                description: Returns `true` when the request is successful.
+                example: true
+              model: |
+                ```json
+                {
+                  "success": boolean
+                }
+                ```
+        "default":
+          description: An error ocurred
+          content:
+            application/json:
+              schema:
+                success:
+                  type: boolean
+                  description: Will return `false` when there are any errors in the request.
+                  example: false
+                error_message:
+                  type: string
+                  description: Some hopefully-useful statement about why it failed.
+                  example: "There are parameters missing in the request body."
+              model: |
+                ```json
+                {
+                  "success": boolean,
+                  "error_message": string
+                }
+                ```
 
   /caption_image:
     post:
@@ -101,34 +175,42 @@ paths:
                 description: A template ID as returned by the get_memes response. Any ID that was ever returned from the get_memes response should work for this parameter. For custom template uploads, the template ID can be found in the memegenerator URL, e.g. https://imgflip.com/memegenerator/14859329/Charlie-Sheen-DERP. Also, here is a list of the top 100 Imgflip meme IDs.
                 required: true
                 type: string
+                example: "14859329"
               username:
                 description: Username of a valid imgflip account. This is used to track where API requests are coming from.
                 required: true
                 type: string
+                example: "username"
               password:
                 description: Password for the imgflip account. As always, make sure password (and all the other parameters) are in the body of the POST request, not in the request url.
                 required: true
                 type: string
+                example: "password"
               text0:
                 description: Top text for the meme (do not use this parameter if you are using the boxes parameter below).
                 required: true
                 type: string
+                example: "This is the top text."
               text1:
                 description: Bottom text for the meme (do not use this parameter if you are using the boxes parameter below).
                 required: true
                 type: string
+                example: "This is the bottom text."
               font:
                 description: The font family to use for the text. Defaults to impact. You can also use "arial" or any of the 1,500+ Google Fonts which you can see in the font menu at imgflip.com/memegenerator.
                 required: false
                 type: string
+                example: "Open Sans"
               max_font_size:
                 description: Maximum font size in pixels. Defaults to 50px.
                 required: false
                 type: integer
+                example: 40
               no_watermark:
                 description: Premium Only - Remove the imgflip.com watermark. First 100 per month included, then $0.01 per creation.
                 required: false
                 type: boolean
+                example: true
               boxes:
                 description: |
                   For creating memes with more than two text boxes, or for further customization. If boxes is specified, text0 and text1 will be ignored, and text will not be automatically converted to uppercase, so you'll have to handle capitalization yourself if you want the standard uppercase meme text. The API is currently limited to 20 text boxes per image. All options below are optional, except "text". The exception is that you may leave the first box completely empty, so that the second box will automatically be used for the bottom text.
@@ -176,6 +258,7 @@ paths:
                 success:
                   type: boolean
                   description: Returns `true` when the request is successful.
+                  example: true
                 data:
                   type: object
                   description: |
@@ -189,8 +272,36 @@ paths:
                       type: string
                       description: URL for the meme template on imgflip.com.
                       example: "https://imgflip.com/i/123abc"
-        default:
-          description: Unexpected error
+              model: |
+                ```json
+                {
+                  "success": boolean,
+                  "data": {
+                    "url": "string",
+                    "page_url": "string"
+                  }
+                }
+                ```
+        "default":
+          description: An error ocurred
+          content:
+            application/json:
+              schema:
+                success:
+                  type: boolean
+                  description: Will return `false` when there are any errors in the request.
+                  example: false
+                error_message:
+                  type: string
+                  description: Some hopefully-useful statement about why it failed.
+                  example: "There are parameters missing in the request body."
+              model: |
+                ```json
+                {
+                  "success": boolean,
+                  "error_message": string
+                }
+                ```
 
 # Basic authentication
 components:
