--- a/_data/meme_generator.yaml
+++ b/_data/meme_generator.yaml
@@ -3,9 +3,17 @@ info:
   version: 1.0.0
   title: Imgflip Meme Generator API
   description: |
-    The Imgflip API uses a RESTful JSON interface. Request parameters are standard HTTP form urlencoded parameters, and return data is JSON.
+    > **Disclaimer:** The content presented in this project was based on [Imgflip's API documentation](https://imgflip.com/api){:target="_blank"}. Some of the original content was changed to fit this demo project. The information presented here shouldn't be treated as accurate nor be used in a real case scenario.
 
-    The base version of the API is free. You can upgrade to our Premium API to unlock advanced features. Requests to the free version of the API do not have a hard limit, but may be throttled or blocked if you start doing crazy things or abusing the API. The Premium API has a base cost of $9.99 per month and includes some Premium requests each month (details below). After that, each type of Premium request has a small per-request cost. Note that the free API endpoints are still free if you have API Premium, you'll only be charged for the Premium-only features.
+    The Imgflip API uses a RESTful JSON interface. Request parameters are standard HTTP form URL encoded parameters, and return data is JSON.
+
+    **The base version of the API is free**. You can upgrade to Imgflip's **Premium API** to unlock advanced features.
+
+    ## Usage
+
+    Requests to the **free version** of the API do not have a hard limit, but may be throttled or blocked if you start doing crazy things or abusing the API.
+    
+    The **Premium API** has a base cost of $9.99 per month and includes some Premium requests each month (details below). After that, each type of Premium request has a small per-request cost. Note that the free API endpoints are still free if you have API Premium, you'll only be charged for the Premium-only features.
   contact:
     name: Imgflip
     url: https://imgflip.com/
@@ -23,7 +31,12 @@ security:
 paths:
   /get_memes:
     get:
-      description: Gets an array of popular memes that may be captioned with this API. The size of this array and the order of memes may change at any time. When this description was written, it returned 100 memes ordered by how many times they were captioned in the last 30 days. Additional properties other than those listed below may be added in the future without warning, so do not assume the JSON structure of each meme will never have new properties.
+      description: |
+        Gets an array of popular memes that may be captioned with this API.
+        
+        The size of this array and the order of memes may change at any time. When this description was written, it returned 100 memes ordered by how many times they were captioned in the last 30 days.
+        
+        Additional properties other than those listed below may be added in the future without warning, so do not assume the JSON structure of each meme will never have new properties.
       responses:
         "200":
           description: OK - The request was successful.
@@ -113,17 +126,17 @@ paths:
       description: |
         Adds a caption to an Imgflip meme template. Images created with this API will be publicly accessible by anyone through the url in the response - there is no "private" option. This does not mean these memes will be posted publicly though, one still needs to know the exact URL to find the image. If the image hangs around on Imgflip servers for a while and gets very few views (direct image views and image page views both count), it will be auto-deleted to save space.
         
-        For a real working example of the API, check out this hubot script (written in coffeescript). That script is open source, so feel free to use that set of regexes as a starting place.
+        For a real working example of the API, check out [this hubot script](https://github.com/dylanwenzlau/hubot-scripts/commit/6db48d050f32739dd4ba90b49df2ee8fbefecdb6){:target="_blank"} (written in coffeescript). That script is open-source, so feel free to use that set of regexes as a starting place.
         
-        IMPORTANT NOTE: If you plan to use the API for anything other than testing, you should create your own Imgflip account and use that instead of the default imgflip_hubot account, because that account may be limited as soon as you send a non-trivial number of requests, and then your script wouldn't be able to make memes anymore, and everyone would be sad. All memes on Imgflip can have custom default font settings which will be used if you do not specify the exact settings you want. For example, this allows a meme such as Two Buttons to default to uncapitalized black text with rotation applied, because it fits the template better.
+        > **Important note:** If you plan to use the API for anything other than testing, you should create your own Imgflip account and use that instead of the default Imgflip account. A default account may be limited as soon as you send a non-trivial number of requests, and then your script wouldn't be able to make memes anymore, and everyone would be sad.
       requestBody:
-        description: All memes on Imgflip can have custom default font settings which will be used if you do not specify the exact settings you want. For example, this allows a meme such as Two Buttons to default to uncapitalized black text with rotation applied, because it fits the template better.
+        description: All memes on Imgflip can have custom default font settings which will be used if you do not specify the exact settings you want. For example, this allows a meme such as [Two Buttons](https://imgflip.com/memegenerator/Two-Buttons){:target="_blank"} to default to uncapitalized black text with rotation applied, because it fits the template better.
         required: true
         content:
           application/json:
             schema:
               template_id:
-                description: A template ID as returned by the get_memes response. Any ID that was ever returned from the get_memes response should work for this parameter. For custom template uploads, the template ID can be found in the memegenerator URL, e.g. https://imgflip.com/memegenerator/14859329/Charlie-Sheen-DERP. Also, here is a list of the top 100 Imgflip meme IDs.
+                description: A template ID as returned by the `GET memes` response. Any ID that was ever returned from the `GET memes` response should work for this parameter. For custom template uploads, the template ID can be found in the meme generator URL, e.g. `https://imgflip.com/memegenerator/14859329/Charlie-Sheen-DERP`. Also, [here is a list of the top 100 Imgflip meme IDs](https://imgflip.com/popular-meme-ids){:target="_blank"}.
                 required: true
                 type: string
                 example: "14859329"
@@ -133,22 +146,22 @@ paths:
                 type: string
                 example: "username"
               password:
-                description: Password for the imgflip account. As always, make sure password (and all the other parameters) are in the body of the POST request, not in the request url.
+                description: Password for the imgflip account. As always, make sure password (and all the other parameters) are in the **body** of the `POST` request, **not** in the request URL.
                 required: true
                 type: string
                 example: "password"
               text0:
-                description: Top text for the meme (do not use this parameter if you are using the boxes parameter below).
+                description: Top text for the meme. Do **not** use this parameter if you are using the boxes parameter below.
                 required: true
                 type: string
                 example: "This is the top text."
               text1:
-                description: Bottom text for the meme (do not use this parameter if you are using the boxes parameter below).
+                description: Bottom text for the meme. Do **not** use this parameter if you are using the boxes parameter below.
                 required: true
                 type: string
                 example: "This is the bottom text."
               font:
-                description: The font family to use for the text. Defaults to impact. You can also use "arial" or any of the 1,500+ Google Fonts which you can see in the font menu at imgflip.com/memegenerator.
+                description: The font family to use for the text. Defaults to impact. You can also use Arial or any of the 1,500+ Google Fonts which you can see in the font menu at [imgflip.com/memegenerator](https://imgflip.com/memegenerator){:target="_blank"}.
                 required: false
                 type: string
                 example: "Open Sans"
@@ -158,15 +171,20 @@ paths:
                 type: integer
                 example: 40
               no_watermark:
-                description: Premium Only - Remove the imgflip.com watermark. First 100 per month included, then $0.01 per creation.
+                description: |
+                  **Premium Only** - Remove the imgflip.com watermark. First 100 per month included, then $0.01 per creation.
                 required: false
                 type: boolean
                 example: true
               boxes:
                 description: |
-                  For creating memes with more than two text boxes, or for further customization. If boxes is specified, text0 and text1 will be ignored, and text will not be automatically converted to uppercase, so you'll have to handle capitalization yourself if you want the standard uppercase meme text. The API is currently limited to 20 text boxes per image. All options below are optional, except "text". The exception is that you may leave the first box completely empty, so that the second box will automatically be used for the bottom text.
+                  For creating memes with more than two text boxes, or for further customization. If boxes is specified, `text0` and `text1` will be ignored, and text will not be automatically converted to uppercase. In this case, you'll have to handle capitalization yourself if you want the standard uppercase meme text.
+                  
+                  The API is currently limited to 20 text boxes per image. All options below are optional, except `text`. The exception is that you may leave the first box completely empty, so that the second box will automatically be used for the bottom text.
 
-                  x, y, width, and height are for the bounding box of the text box. x and y are the coordinates of the top left corner. If you specify bounding coordinates, be sure to specify all four (x, y, width, height), otherwise your text may not show up correctly. If you do not specify bounding box coordinates, the same automatic default coordinates from imgflip.com/memegenerator will be used, which is very useful for memes with special text box positioning other than the simple top/bottom.
+                  `x`, `y`, `width`, and `height` are for the bounding box of the text box. `x` and `y` are the coordinates of the top left corner. If you specify bounding coordinates, be sure to specify all four (`x`, `y`, `width`, `height`) otherwise your text may not show up correctly.
+                  
+                  If you do not specify bounding box coordinates, the same automatic default coordinates from [imgflip.com/memegenerator](https://imgflip.com/memegenerator){:target="_blank"} will be used, which is very useful for memes with special text box positioning other than the simple top/bottom.
                 required: false
                 type: array
                 items:
